tests/baselines/reference/internalImportUnInstantiatedModuleMergedWithClassNotReferencingInstanceNoConflict.errors.txt
internalImportUnInstantiatedModuleMergedWithClassNotReferencingInstanceNoConflict.ts(4,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
internalImportUnInstantiatedModuleMergedWithClassNotReferencingInstanceNoConflict.ts(8,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== internalImportUnInstantiatedModuleMergedWithClassNotReferencingInstanceNoConflict.ts (2 errors) ====
    class A {
        aProp: string;
    }
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface X { s: string }
    }
    
    module B {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import Y = A;
    }
    